loading spinner added

--- a/index.html
+++ b/index.html
@@ -59,7 +59,17 @@
             Create slider
           </button>
         </div>
-        <div class="row gallery"></div>
+        <!-- loading spinner -->
+        <div class="d-flex justify-content-center mt-5">
+          <div
+            id="loading-spinner"
+            class="spinner-border text-warning d-none"
+            role="status"
+          >
+            <span class="visually-hidden"></span>
+          </div>
+        </div>
+        <div id="image-gallery" class="row gallery"></div>
       </section>
       <!-- slider -->
       <div class="main">
