image selection count status added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             <span class="visually-hidden"></span>
           </div>
         </div>
+        <div id="selection-status">
+          <p id="selection-status-count"></p>
+        </div>
         <div id="image-gallery" class="row gallery"></div>
       </section>
       <!-- slider -->
